--- a/_data/nav-top.yml
+++ b/_data/nav-top.yml
@@ -1,8 +1,6 @@
-- title: "Research"
-  url: /research
-- title: "Teaching"
-  url: /teaching
-- title: "Creative"
-  url: /creative
-- title: "CV"
-  url: /cv
+- title: "About the Project"
+  url: /about
+- title: "Oral Histories"
+  url: /oral_histories
+- title: "Student Work"
+  url: /student_work
